--- a/aiml50/azure-pipelines.yml
+++ b/aiml50/azure-pipelines.yml
@@ -65,6 +65,6 @@ steps:
         --organization "https://dev.azure.com/$(org_name)/" \
         --feed "SeerPackages" \
         --name "seer_deployment" \
-        --version "$(Build.BuildNumber)" \
+        --version "1.0.0" \
         --description "Seer files" \
         --path .
